--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Responsive website template for documentations</title>
+    <title>مستندات شمعدونی</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,10 +17,12 @@
     <!-- Plugins CSS -->    
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="assets/plugins/elegant_font/css/style.css">
+    <link rel="stylesheet" href="assets/plugins/elegant_font/css/css/style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/iranian-sans" type="text/css"/>
     
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/css/style.css"> 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -59,7 +61,7 @@
                 <h2 class="title">شروع کار با رندر شمعدونی</h2>
                 <br>
                 <div id="cards-wrapper" class="cards-wrapper row">
-                    <div class="item item-green col-md-4 col-md-offset-4 col-sm-6 col-xs-6">
+                    <div class="item item-green col-md-4 col-md-offset-2 col-sm-6 col-xs-6">
                         <div class="item-inner">
                             <div class="icon-holder">
                                 <i class="icon fa fa-paper-plane"></i>
@@ -69,16 +71,16 @@
                             <a class="link" href="start.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
-                    <!--<div class="item item-pink item-2 col-md-4 col-sm-6 col-xs-6">
+                    <div class="item item-pink item-2 col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div>
-                            <h3 class="title">پلاگین ها</h3>
-                            <p class="intro">نحوه نصب و راه اندازی پلاگین های فروشگاه ساز های آنلاین.</p>
-                            <a class="link" href="components.html"><span></span></a>
+                            <h3 class="title">پلاگین WOOCOMMERCE</h3>
+                            <p class="intro">نحوه نصب و راه اندازی پلاگین شمعدونی رو فروشگاه های WOOCOMMERCE.</p>
+                            <a class="link" href="woocommerce.html"><span></span></a>
                         </div>
-                    </div>-->
+                    </div>
                 </div>
                 
             </div><!--//container-->
