--- a/woocommerce.html
+++ b/woocommerce.html
@@ -61,7 +61,7 @@
                                         نصب پلاگین شمعدونی یکی از ساده ترین کارهایی که تا حالا انجام دادید. برای این کار ابتدا باید در سایت عضو شوید و یک API key از سایت بگیرید.
                                     </p>
                                     <p>
-                                        سپس پلاگین رو از <a href="http://shamdooni.org/iframe/shamdooni.zip">اینجا</a> دانلود میکنید و در پوشه پلاگین های وردپرس خود میریزید.
+                                        سپس پلاگین رو از <a href="http://shamdooni.org/downloads/plugins/wp/wp-shamdooni_V1.0.1.zip">اینجا</a> دانلود میکنید و در پوشه پلاگین های وردپرس خود میریزید.
                                     </p>
                                     <p>
                                         در مرحله سوم باید در قسمت افزونه های وردپرس افزونه شمعدونی رو فعال کنید سپس در قسمت تنظیمات در بخش شمعدونی API key که در مرحله اول از سایت گرفتید را وارد میکنید.
